// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HistorySection > renders desktop as expected 1`] = `
<div>
  <div
    class="section section-normal py-spacing-y border-b border-divider overflow-hidden history-section"
  >
    <div
      class="section__title-container flex justify-between items-center gap-space-between"
    >
      <div
        class="section__content flex-1"
      >
        <h2
          class="section__title mb-4 relative after:w-full"
        >
          Our history
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="history-section__container flex flex-col sm:flex-row sm:gap-2 gap-8"
      >
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--desktop flex flex-col gap-space-between"
          >
            <div
              class="history-section__year-container w-full flex gap-2"
            >
              <p
                class="history-section__year bg-bluedot-normal rounded-full px-4 py-2 text-on-dark text-[16px] font-bold w-min"
              >
                2021
              </p>
              <div
                class="history-section__year-decoration relative w-full after:content-[''] after:absolute after:top-1/2 after:w-full after:h-[2px] after:bg-bluedot-normal after:right-0"
              />
            </div>
            <p
              class="history-section__event-title mr-12"
            >
              Before BlueDot, we began as a University of Cambridge student group, hosting discussions on transformative emerging technologies.
            </p>
          </div>
        </div>
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--desktop flex flex-col gap-space-between"
          >
            <div
              class="history-section__year-container w-full flex gap-2"
            >
              <p
                class="history-section__year bg-bluedot-normal rounded-full px-4 py-2 text-on-dark text-[16px] font-bold w-min"
              >
                2022
              </p>
              <div
                class="history-section__year-decoration relative w-full after:content-[''] after:absolute after:top-1/2 after:w-full after:h-[2px] after:bg-bluedot-normal after:right-0"
              />
            </div>
            <p
              class="history-section__event-title mr-12"
            >
              Launched our first AI Safety course with 400+ participants, founded BlueDot Impact, and established our London headquarters.
            </p>
          </div>
        </div>
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--desktop flex flex-col gap-space-between"
          >
            <div
              class="history-section__year-container w-full flex gap-2"
            >
              <p
                class="history-section__year bg-bluedot-normal rounded-full px-4 py-2 text-on-dark text-[16px] font-bold w-min"
              >
                2023
              </p>
              <div
                class="history-section__year-decoration relative w-full after:content-[''] after:absolute after:top-1/2 after:w-full after:h-[2px] after:bg-bluedot-normal after:right-0"
              />
            </div>
            <p
              class="history-section__event-title mr-12"
            >
              Delivered a new course every four months, training 800+ people in AI Alignment, Governance, and Biosecurity.
            </p>
          </div>
        </div>
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--desktop flex flex-col gap-space-between"
          >
            <div
              class="history-section__year-container w-full flex gap-2"
            >
              <p
                class="history-section__year bg-bluedot-normal rounded-full px-4 py-2 text-on-dark text-[16px] font-bold w-min"
              >
                2024
              </p>
              <div
                class="history-section__year-decoration relative w-full after:content-[''] after:absolute after:top-1/2 after:w-full after:h-[2px] after:bg-bluedot-normal after:right-0"
              />
            </div>
            <p
              class="history-section__event-title mr-12"
            >
              Accelerated to monthly courses, reaching 3,000+ participants worldwide. Over 400 of our course graduates now work in AI Safety.
            </p>
          </div>
        </div>
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--desktop flex flex-col gap-space-between"
          >
            <div
              class="history-section__year-container w-full flex gap-2"
            >
              <p
                class="history-section__year bg-bluedot-normal rounded-full px-4 py-2 text-on-dark text-[16px] font-bold w-min"
              >
                2025
              </p>
              <div
                class="history-section__year-decoration relative w-full after:content-[''] after:absolute after:top-1/2 after:w-full after:h-[2px] after:bg-bluedot-normal after:right-0"
              />
            </div>
            <p
              class="history-section__event-title mr-12"
            >
              Launching multiple courses weekly and expanding a world-class team to scale our global impact.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HistorySection > renders mobile as expected 1`] = `
<div>
  <div
    class="section section-normal py-spacing-y border-b border-divider overflow-hidden history-section"
  >
    <div
      class="section__title-container flex justify-between items-center gap-space-between"
    >
      <div
        class="section__content flex-1"
      >
        <h2
          class="section__title mb-4 relative after:w-full"
        >
          Our history
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="history-section__container flex flex-col sm:flex-row sm:gap-2 gap-8"
      >
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--mobile w-full flex flex-row gap-12 p-8
          container-lined"
          >
            <strong
              class="history-section__year"
            >
              2021
            </strong>
            <p
              class="history-section__event-title"
            >
              Before BlueDot, we began as a University of Cambridge student group, hosting discussions on transformative emerging technologies.
            </p>
          </div>
        </div>
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--mobile w-full flex flex-row gap-12 p-8
          container-lined"
          >
            <strong
              class="history-section__year"
            >
              2022
            </strong>
            <p
              class="history-section__event-title"
            >
              Launched our first AI Safety course with 400+ participants, founded BlueDot Impact, and established our London headquarters.
            </p>
          </div>
        </div>
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--mobile w-full flex flex-row gap-12 p-8
          container-lined"
          >
            <strong
              class="history-section__year"
            >
              2023
            </strong>
            <p
              class="history-section__event-title"
            >
              Delivered a new course every four months, training 800+ people in AI Alignment, Governance, and Biosecurity.
            </p>
          </div>
        </div>
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--mobile w-full flex flex-row gap-12 p-8
          container-lined"
          >
            <strong
              class="history-section__year"
            >
              2024
            </strong>
            <p
              class="history-section__event-title"
            >
              Accelerated to monthly courses, reaching 3,000+ participants worldwide. Over 400 of our course graduates now work in AI Safety.
            </p>
          </div>
        </div>
        <div
          class="history-section__event"
        >
          <div
            class="history-section__event-container--mobile w-full flex flex-row gap-12 p-8
          border bg-bluedot-lighter border-bluedot-light rounded-xl"
          >
            <strong
              class="history-section__year"
            >
              2025
            </strong>
            <p
              class="history-section__event-title"
            >
              Launching multiple courses weekly and expanding a world-class team to scale our global impact.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
